Address Java 25 lint warnings